--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "framer-motion": "^10.11.2",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
