--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "firebase": "^9.22.2",
     "framer-motion": "^10.11.2",
     "next": "13.3.0",
     "next-themes": "^0.2.1",
